Add language selection

--- a/MovieRenamer/App.config
+++ b/MovieRenamer/App.config
@@ -6,5 +6,6 @@
   <appSettings>
     <add key="from" value="C:\\Development\\Personal\\TestMedia\\MP4s" />
     <add key="to" value="C:\\Development\\Personal\\TestMedia\\MP4s" />
+    <add key="language" value="" />
   </appSettings>
 </configuration>
